更正数据库表名表项（优化），同步规范逻辑
